# vetinari

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tick.h  ticktock.h  tock.h  vetinari.cpp
